--- a/matching-game/src/styles/elements/base.css
+++ b/matching-game/src/styles/elements/base.css
@@ -1,5 +1,11 @@
+html, body {
+  font-size: 10px;
+  height: 100%;
+}
+
 body {
   background-color: var(--color-pomb-and-power);
+  font-family: var(--default-font);
   max-width: 320px;
   margin-left: auto;
   margin-right: auto;
