--- a/matching-game/src/styles/settings/colors.css
+++ b/matching-game/src/styles/settings/colors.css
@@ -2,5 +2,6 @@
   --color-alura: #051932;
   --color-pomb-and-power: #7c5e99;
   --color-floral-white: #fffcee;
-  --color-fiery-rose: #F25A70;
+  --color-fiery-rose: #f25a70;
+  --color-sandstorm: #f5d547;
 }
