--- a/matching-game/src/components/PlayerScore/style.css
+++ b/matching-game/src/components/PlayerScore/style.css
@@ -1,16 +1,30 @@
 .player-score {
   display: flex;
-  justify-content: center;
-  align-items: center;
   gap: 2px;
   width: 50px;
   height: 20px;
   background-color: var(--color-floral-white);
   border: 2px solid var(--color-fiery-rose);
+  padding: 1px;
+  box-sizing: border-box;
 }
 
-.player-score > .square {
-  width: 14px;
-  height: 14px;
+.player-score > .pointer {
   background-color: var(--color-old-silver);
+  text-indent: -999px;
+  overflow: hidden;
+  width: 33%;
 }
+
+.player-score[data-points="1"] > .pointer:first-child {
+  background-color: var(--color-mantis);
+}
+
+.player-score[data-points="2"] > .pointer:nth-child(-n+2) {
+  background-color: var(--color-mantis);
+}
+
+.player-score[data-points="3"] > .pointer {
+  background-color: var(--color-mantis);
+}
+
